[package]
name = "wgpu-prog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
quick-error = "2.0"
pollster = "0.3"
